--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,36 +1,40 @@
 .level-item
+  align-items: center
+  display: flex
+  justify-content: center
   .title,
   .subtitle
     margin-bottom: 0
   // Responsiveness
   +mobile
     &:not(:last-child)
-      margin-bottom: 10px
+      margin-bottom: 0.75rem
 
 .level-left,
 .level-right
   .level-item
     &:not(:last-child)
-      margin-right: 10px
+      margin-right: 0.75rem
     // Modifiers
     &.is-flexible
       flex-grow: 1
 
 .level-left
+  align-items: center
+  justify-content: flex-start
   // Responsiveness
   +mobile
     & + .level-right
-      margin-top: 20px
+      margin-top: 1.5rem
   +tablet
-    align-items: center
     display: flex
 
 .level-right
+  align-items: center
+  justify-content: flex-end
   // Responsiveness
   +tablet
-    align-items: center
     display: flex
-    justify-content: flex-end
 
 .level
   +block
