--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -66,7 +66,7 @@
       </span>
     {% else %}
       <span class="nav-item">
-        <a class="button is-light is-outlined"
+        <a class="button is-primary is-inverted is-outlined"
         data-social-network="Twitter"
         data-social-action="tweet"
         data-social-target="http://bulma.io/"
