--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -745,7 +745,6 @@ a.box:active {
 .button.is-white.is-outlined {
   background-color: transparent;
   border-color: white;
-  border-width: 1px;
   color: white;
 }
 
@@ -753,6 +752,17 @@ a.box:active {
   background-color: white;
   border-color: white;
   color: #0a0a0a;
+}
+
+.button.is-white.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: #0a0a0a;
+  color: #0a0a0a;
+}
+
+.button.is-white.is-inverted.is-outlined:hover, .button.is-white.is-inverted.is-outlined:focus {
+  background-color: #0a0a0a;
+  color: white;
 }
 
 .button.is-black {
@@ -796,7 +806,6 @@ a.box:active {
 .button.is-black.is-outlined {
   background-color: transparent;
   border-color: #0a0a0a;
-  border-width: 1px;
   color: #0a0a0a;
 }
 
@@ -804,6 +813,17 @@ a.box:active {
   background-color: #0a0a0a;
   border-color: #0a0a0a;
   color: white;
+}
+
+.button.is-black.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: white;
+  color: white;
+}
+
+.button.is-black.is-inverted.is-outlined:hover, .button.is-black.is-inverted.is-outlined:focus {
+  background-color: white;
+  color: #0a0a0a;
 }
 
 .button.is-light {
@@ -847,7 +867,6 @@ a.box:active {
 .button.is-light.is-outlined {
   background-color: transparent;
   border-color: whitesmoke;
-  border-width: 1px;
   color: whitesmoke;
 }
 
@@ -855,6 +874,17 @@ a.box:active {
   background-color: whitesmoke;
   border-color: whitesmoke;
   color: #363636;
+}
+
+.button.is-light.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: #363636;
+  color: #363636;
+}
+
+.button.is-light.is-inverted.is-outlined:hover, .button.is-light.is-inverted.is-outlined:focus {
+  background-color: #363636;
+  color: whitesmoke;
 }
 
 .button.is-dark {
@@ -898,7 +928,6 @@ a.box:active {
 .button.is-dark.is-outlined {
   background-color: transparent;
   border-color: #363636;
-  border-width: 1px;
   color: #363636;
 }
 
@@ -906,6 +935,17 @@ a.box:active {
   background-color: #363636;
   border-color: #363636;
   color: whitesmoke;
+}
+
+.button.is-dark.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: whitesmoke;
+  color: whitesmoke;
+}
+
+.button.is-dark.is-inverted.is-outlined:hover, .button.is-dark.is-inverted.is-outlined:focus {
+  background-color: whitesmoke;
+  color: #363636;
 }
 
 .button.is-primary {
@@ -949,7 +989,6 @@ a.box:active {
 .button.is-primary.is-outlined {
   background-color: transparent;
   border-color: #00d1b2;
-  border-width: 1px;
   color: #00d1b2;
 }
 
@@ -957,6 +996,17 @@ a.box:active {
   background-color: #00d1b2;
   border-color: #00d1b2;
   color: #fff;
+}
+
+.button.is-primary.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: #fff;
+  color: #fff;
+}
+
+.button.is-primary.is-inverted.is-outlined:hover, .button.is-primary.is-inverted.is-outlined:focus {
+  background-color: #fff;
+  color: #00d1b2;
 }
 
 .button.is-info {
@@ -1000,7 +1050,6 @@ a.box:active {
 .button.is-info.is-outlined {
   background-color: transparent;
   border-color: #3273dc;
-  border-width: 1px;
   color: #3273dc;
 }
 
@@ -1008,6 +1057,17 @@ a.box:active {
   background-color: #3273dc;
   border-color: #3273dc;
   color: #fff;
+}
+
+.button.is-info.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: #fff;
+  color: #fff;
+}
+
+.button.is-info.is-inverted.is-outlined:hover, .button.is-info.is-inverted.is-outlined:focus {
+  background-color: #fff;
+  color: #3273dc;
 }
 
 .button.is-success {
@@ -1051,7 +1111,6 @@ a.box:active {
 .button.is-success.is-outlined {
   background-color: transparent;
   border-color: #23d160;
-  border-width: 1px;
   color: #23d160;
 }
 
@@ -1059,6 +1118,17 @@ a.box:active {
   background-color: #23d160;
   border-color: #23d160;
   color: #fff;
+}
+
+.button.is-success.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: #fff;
+  color: #fff;
+}
+
+.button.is-success.is-inverted.is-outlined:hover, .button.is-success.is-inverted.is-outlined:focus {
+  background-color: #fff;
+  color: #23d160;
 }
 
 .button.is-warning {
@@ -1102,7 +1172,6 @@ a.box:active {
 .button.is-warning.is-outlined {
   background-color: transparent;
   border-color: #ffdd57;
-  border-width: 1px;
   color: #ffdd57;
 }
 
@@ -1110,6 +1179,17 @@ a.box:active {
   background-color: #ffdd57;
   border-color: #ffdd57;
   color: rgba(0, 0, 0, 0.7);
+}
+
+.button.is-warning.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.button.is-warning.is-inverted.is-outlined:hover, .button.is-warning.is-inverted.is-outlined:focus {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #ffdd57;
 }
 
 .button.is-danger {
@@ -1153,7 +1233,6 @@ a.box:active {
 .button.is-danger.is-outlined {
   background-color: transparent;
   border-color: #ff3860;
-  border-width: 1px;
   color: #ff3860;
 }
 
@@ -1161,6 +1240,17 @@ a.box:active {
   background-color: #ff3860;
   border-color: #ff3860;
   color: #fff;
+}
+
+.button.is-danger.is-inverted.is-outlined {
+  background-color: transparent;
+  border-color: #fff;
+  color: #fff;
+}
+
+.button.is-danger.is-inverted.is-outlined:hover, .button.is-danger.is-inverted.is-outlined:focus {
+  background-color: #fff;
+  color: #ff3860;
 }
 
 .button.is-small {
@@ -3770,6 +3860,7 @@ a.box:active {
   display: flex;
   flex-grow: 0;
   flex-shrink: 0;
+  font-size: 1rem;
   justify-content: center;
   padding: 0.5rem 0.75rem;
 }
@@ -3787,12 +3878,12 @@ a.box:active {
   margin-left: 0.75rem;
 }
 
-.nav-item .tag:first-child {
-  margin-right: 0.25rem;
+.nav-item .tag:first-child:not(:last-child) {
+  margin-right: 0.5rem;
 }
 
-.nav-item .tag:last-child {
-  margin-left: 0.25rem;
+.nav-item .tag:last-child:not(:first-child) {
+  margin-left: 0.5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -3820,21 +3911,23 @@ a.nav-item.is-active {
 a.nav-item.is-tab {
   border-bottom: 1px solid transparent;
   border-top: 1px solid transparent;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-bottom: calc(0.5rem - 1px);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: calc(0.5rem - 1px);
 }
 
 .nav-item a.is-tab:hover,
 a.nav-item.is-tab:hover {
-  border-bottom: 1px solid #00d1b2;
-  border-top: 1px solid transparent;
+  border-bottom-color: #00d1b2;
+  border-top-color: transparent;
 }
 
 .nav-item a.is-tab.is-active,
 a.nav-item.is-tab.is-active {
   border-bottom: 3px solid #00d1b2;
-  border-top: 3px solid transparent;
   color: #00d1b2;
+  padding-bottom: calc(0.5rem - 3px);
 }
 
 @media screen and (max-width: 768px) {
@@ -3862,12 +3955,16 @@ a.nav-item.is-tab.is-active {
   }
 }
 
-.nav-left {
+.nav-left,
+.nav-right {
   align-items: stretch;
-  display: flex;
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 0;
+}
+
+.nav-left {
+  display: flex;
   justify-content: flex-start;
   overflow: hidden;
   overflow-x: auto;
@@ -3877,19 +3974,20 @@ a.nav-item.is-tab.is-active {
 .nav-center {
   align-items: stretch;
   display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
 }
 
+.nav-right {
+  justify-content: flex-end;
+}
+
 @media screen and (min-width: 769px) {
   .nav-right {
-    align-items: stretch;
     display: flex;
-    flex-basis: 0;
-    flex-grow: 1;
-    flex-shrink: 0;
-    justify-content: flex-end;
   }
 }
 
