--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4316,8 +4316,8 @@ a.panel-block:hover {
   user-select: none;
   align-items: stretch;
   display: flex;
+  font-size: 1rem;
   justify-content: space-between;
-  line-height: 24px;
   overflow: hidden;
   overflow-x: auto;
   white-space: nowrap;
@@ -4334,7 +4334,7 @@ a.panel-block:hover {
   display: flex;
   justify-content: center;
   margin-bottom: -1px;
-  padding: 6px 12px;
+  padding: 0.5em 1em;
   vertical-align: top;
 }
 
@@ -4362,27 +4362,27 @@ a.panel-block:hover {
 }
 
 .tabs ul.is-left {
-  padding-right: 10px;
+  padding-right: 0.75em;
 }
 
 .tabs ul.is-center {
   flex: none;
   justify-content: center;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 0.75em;
+  padding-right: 0.75em;
 }
 
 .tabs ul.is-right {
   justify-content: flex-end;
-  padding-left: 10px;
+  padding-left: 0.75em;
 }
 
 .tabs .icon:first-child {
-  margin-right: 8px;
+  margin-right: 0.5em;
 }
 
 .tabs .icon:last-child {
-  margin-left: 8px;
+  margin-left: 0.5em;
 }
 
 .tabs.is-centered ul {
@@ -4396,8 +4396,6 @@ a.panel-block:hover {
 .tabs.is-boxed a {
   border: 1px solid transparent;
   border-radius: 3px 3px 0 0;
-  padding-bottom: 5px;
-  padding-top: 5px;
 }
 
 .tabs.is-boxed a:hover {
@@ -4419,8 +4417,6 @@ a.panel-block:hover {
 .tabs.is-toggle a {
   border: 1px solid #dbdbdb;
   margin-bottom: 0;
-  padding-bottom: 5px;
-  padding-top: 5px;
   position: relative;
 }
 
@@ -4457,39 +4453,12 @@ a.panel-block:hover {
   font-size: 0.75rem;
 }
 
-.tabs.is-small a {
-  padding: 2px 8px;
-}
-
-.tabs.is-small.is-boxed a, .tabs.is-small.is-toggle a {
-  padding-bottom: 1px;
-  padding-top: 1px;
-}
-
 .tabs.is-medium {
   font-size: 1.25rem;
 }
 
-.tabs.is-medium a {
-  padding: 10px 16px;
-}
-
-.tabs.is-medium.is-boxed a, .tabs.is-medium.is-toggle a {
-  padding-bottom: 9px;
-  padding-top: 9px;
-}
-
 .tabs.is-large {
   font-size: 1.5rem;
-}
-
-.tabs.is-large a {
-  padding: 14px 20px;
-}
-
-.tabs.is-large.is-boxed a, .tabs.is-large.is-toggle a {
-  padding-bottom: 13px;
-  padding-top: 13px;
 }
 
 .column {
